--- a/src/styles/Hero.module.css
+++ b/src/styles/Hero.module.css
@@ -5,9 +5,14 @@
 
 .title{
     padding: 6px 36px;
+    font-weight: 600;
+    font-size: 36px;
 }
 
 .content{
     width: 320px;
     padding: 10px 36px;
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 110%;
 }
